# my_config

./: .buildinfo  .gitignore  blog.html  dev.md  genindex.html  index.html  main.py  objects.inv  pyproject.toml  readme.rst  requirements.txt  rm.sh  run_dev.sh  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/docs/: _ultisnippet.doctree  _vs-snippet.doctree  cookiecutter.doctree  docker.doctree  git.doctree  github_action.doctree  hardware.doctree  homelab.doctree  neovim.doctree  resources.doctree  snippets.doctree  (+4 more)
_sources/: index.rst.txt
_static/: documentation_options.js  shibuya.css
blog/: drafts.html
docs/: _ultisnippet.html  _vs-snippet.html  conf.py  cookiecutter.html  docker.html  git.html  github_action.html  hardware.html  homelab.html  index.rst  neovim.html  resources.html  snippets.html  sphinx.html  tikz.html  tmux.html  vps.html
doom/: config.el
ghostty/: config.ghostty
mds/: feiniu.html  github_actions.html  hardware.html  typst.html  vps.html  win11.html  wsl.html
nvim/: coc-settings.json  init-coc.vim  init.lua  init.vim  init_pure.vim  install.sh  readme.rst  update.sh  update_lua_from_cur.sh  update_snip_from_current_os.sh
rsts/: _ultisnippet.html  _vs-snippet.html  cookiecutter.html  docker.html  git.html  hardware.html  homelab.html  neovim.html  resources.html  snippets.html  sphinx.html  tikz.html
scripts/: dnspod_ddns.py
snippets/: readme.rst  snippets.py  update_ultisnip_from_current_os.sh  update_ultisnip_from_local.py
tmux/: .tmux.conf  install.sh  readme.md
vimrc/: vimrc
(+135 files in other folders)
